<resources>
    <string name="app_name">fancybin</string>
    <string name="title_home">Home</string>
    <string name="title_education">Education</string>
    <string name="title_scan">Scan</string>
    <string name="splash">Splash Screen</string>
    <string name="title_onboard_1">Aplikasi Serbaguna Buat Kamu &#128077;</string>
    <string name="desc_onboard_1">Aplikasi yang dibuat untuk kamu agar tahu Jenis sampah serta Dampaknya bagi Lingkungan</string>
    <string name="start">Mulai</string>
    <string name="onboarding_image">Onboarding Image</string>
    <string name="title_onboard_2">Gak Pusing Milah Sampah! &#128526;</string>
    <string name="desc_onboard_2">Kamu gak perlu mikir milahnya gimana biar Fancybin yang atur!</string>
    <string name="title_onboard_3">Buang Sampah Dapet Poin! &#129297;</string>
    <string name="desc_onboard_3">Mendapat Poin dengan sangat mudah Semudah membuang sampah!</string>
    <string name="iv_welcome">imageview welcome</string>
    <string name="tv_title_welcome">Selamat datang di Fancybin!</string>
    <string name="tv_desc_welcome">Belajar memilah sampah, Mengenali sampah dengan Trash Detector, semua ada di Fancybin!</string>
    <string name="tv_login">Masuk</string>
    <string name="tv_register">Daftar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tv_title_login">Kamu Sudah Daftar?</string>
    <string name="tv_desc_login">Sekarang masukkan datamu dulu ya!</string>
    <string name="tv_email">Masukkan email kamu</string>
    <string name="tv_invalid_email">Email kamu tidak valid</string>
    <string name="tv_warning_password">Password harus 6 kata yah</string>
    <string name="tv_name">Nama</string>
    <string name="tv_password">Masukkan password kamu</string>
    <string name="tv_title_register">Baru Gabung?</string>
    <string name="tv_desc_register">Masukkan data dirimu dengan benar ya!</string>
    <string name="iv_register">image View Register</string>
    <string name="iv_login">Image View Login</string>
    <string name="title_location">Device</string>
    <string name="tv_title_feature">Judul Fitur</string>
    <string name="tv_desc_feature">Yuk jelajahi fitur yang kami punya!</string>
    <string name="tv_point">poin</string>
    <string name="tv_exchange">Tukar</string>
    <string name="tv_throw">Buang</string>
    <string name="location_off_message">Tolong nyalakan lokcasimu ya</string>
    <string name="userpoint">0001</string>
    <string name="user_point">0001</string>
    <string name="tv_gallery">Gallery</string>
    <string name="tv_camera">camera</string>
    <string name="tv_predict">PREDICT</string>
    <string name="tv_title_fancybin_list">Fancybin List</string>
    <string name="Feature_img_desc">Gambar Fitur</string>
    <string-array name="data_title">
        <item>Edukasi</item>
        <item>Edukasi</item>
        <item>Edukasi</item>
    </string-array>
    <string-array name="data_description">
        <item>Sepele tapi efeknya luar biasa untuk Alam
            Yuk tambah wawasan tentang Sampah!</item>
        <item>Sepele tapi efeknya luar biasa untuk Alam
            Yuk tambah wawasan tentang Sampah!</item>
        <item>Sepele tapi efeknya luar biasa untuk Alam
            Yuk tambah wawasan tentang Sampah!</item>
    </string-array>
    <integer-array name="data_image">
        <item>@drawable/iv_feature</item>
        <item>@drawable/iv_feature</item>
        <item>@drawable/iv_feature</item>
    </integer-array>

</resources>